# csm

./: .gitignore  CLAUDE.md  README.md  coverage.xml  implementation_status.txt  mock_modules.py  pyproject.toml  test_dtype.py  test_lora_direct.py  test_lora_minimal.py  test_mlx_generator.py
.github/workflows/: README.md  check_mlx.py  test.yml
ccsm/: .gitignore  CCSM_TEST_PLAN.md  CMakeLists.txt  DEVELOPMENT.md  NEXT_STEPS.md  README.md  build.sh  ccsm-generate  ccsm-generate-mlx  generator_test  generator_test.cpp  generator_test_build.sh  macos_setup.sh  run_specific_test.sh  run_tests_with_coverage.sh  temp_fix.patch  test_watermarking.sh  vector_test.cpp
ccsm/cmake/: CodeCoverage.cmake
ccsm/docs/: kv_cache_quantization.md  mlx_optimizations.md  watermarking.md
ccsm/examples/: config_example.cpp  config_example.json
ccsm/include/ccsm/: cli_args.h  config.h  context_manager.h  generator.h  mimi_codec.h  model.h  model_loader.h  tensor.h  tokenizer.h  utils.h  version.h  watermarking.h
ccsm/include/ccsm/cpu/: ggml_model.h  ggml_tensor.h  simd.h  thread_pool.h
ccsm/include/ccsm/mlx/: mlx_generator.h  mlx_model.h  mlx_optimizations.h  mlx_tensor.h  mlx_transformer.h  mlx_weight_converter.h
ccsm/scripts/: analyze_coverage.py  run_tests_with_coverage.sh
ccsm/src/: CMakeLists.txt  cli_args.cpp  config.cpp  context_manager.cpp  generator.cpp  main.cpp  main_mlx.cpp  mimi_codec.cpp  model.cpp  model_loader.cpp  tensor.cpp  tokenizer.cpp  utils.cpp  watermarking.cpp
ccsm/src/cpu/: ggml_model.cpp  ggml_tensor.cpp  simd.cpp  thread_pool.cpp
ccsm/src/mlx/: mlx_generator.cpp  mlx_model.cpp  mlx_optimizations.cpp  mlx_tensor.cpp  mlx_transformer.cpp  mlx_weight_converter.cpp
ccsm/tests/: CMakeLists.txt  README.md  main_test.cpp
ccsm/tests/integration/: CMakeLists.txt  test_generation_workflow.cpp
ccsm/tests/simd/: test_simd.cpp  test_simd_activation.cpp  test_simd_edge_cases.cpp  test_simd_fused.cpp  test_simd_fused_quantized.cpp  test_simd_inplace.cpp  test_simd_matmul.cpp  test_simd_mixed_precision.cpp  test_simd_quantization.cpp
ccsm/tests/tokenizer/: test_tokenizer.cpp
ccsm/tests/unit/: test_config.cpp  test_context_management.cpp  test_generator.cpp  test_generator_advanced.cpp  test_generator_basic.cpp  test_generator_configuration.cpp  test_generator_memory_optimization.cpp  test_generator_sampling.cpp  test_generator_stress.cpp  test_ggml_advanced_quantization.cpp  test_ggml_fused_quantized.cpp  test_ggml_fused_quantized_kernel.cpp  test_ggml_kv_cache_pruning.cpp  test_ggml_kv_cache_quantization.cpp  test_ggml_model.cpp  test_ggml_model_memory_optimization.cpp  test_ggml_model_quantization.cpp  test_ggml_model_quantization_memory.cpp  test_ggml_quantization.cpp  test_ggml_tensor.cpp  test_kv_cache_memory_optimization.cpp  test_memory_optimization_edge_cases.cpp  test_memory_optimization_edge_cases_old.cpp  test_mimi_codec.cpp  test_mlx_generator.cpp  test_mlx_model.cpp  test_mlx_optimizations.cpp  test_mlx_tensor.cpp  test_mlx_transformer.cpp  test_mlx_weight_converter.cpp  test_model.cpp  test_model_factory.cpp  test_quantized_matrix_mul.cpp  test_simd.cpp  test_tensor.cpp  test_tensor_memory_efficiency.cpp  test_tensor_quantization.cpp  test_tensor_quantized_operations.cpp  test_tensor_serialization.cpp  test_tensor_type_promotion.cpp  (+8 more)
ccsm/tests/unit/custom/: CMakeLists.txt  test_neon_vectors  test_neon_vectors.cpp
ccsm/tests/unit/mlx/: README.md  test_mlx_memory_management.cpp  test_mlx_optimizations.cpp  test_mlx_tensor_ops.cpp
docs/: README.md  ccsm.md
docs/reference/: README.md
docs/reference/moshi/: index.md
docs/reference/sesame_csm/: index.md  lora_finetuning.md
examples/: huggingface_lora_finetune.py  test_lora.py  test_lora_finetune.py  test_lora_generation.py
examples/lora_finetuning/: README.md
src/csm/: _version.py  generator.py
src/csm/cli/: finetune_lora.py  generate_mlx.py
src/csm/mlx/: mlx_embedding.py  mlx_generation.py  mlx_layers.py  mlx_ops.py  mlx_wrapper.py
src/csm/mlx/components/: generator.py.bak  lora.py  model_wrapper.py  sampling.py  transformer.py
src/csm/mlx_accel/: mlx_embedding.py  mlx_generation.py  mlx_ops.py  mlx_wrapper.py
src/csm/mlx_accel/components/: generator.py  model_wrapper.py  transformer.py
src/csm/models/: model.py
src/csm/training/: lora_trainer.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_generation_workflow.py
tests/unit/: __init__.py  test_cli_verify.py  test_components_sampling.py  test_components_utils.py  test_generator.py  test_load_model.py  test_mlx_accel_utils.py  test_mlx_config.py  test_mlx_embedding.py  test_mlx_generation.py  test_mlx_generator.py  test_mlx_kvcache.py  test_mlx_layers.py  test_mlx_model_wrapper.py  test_mlx_ops.py  test_mlx_sample_exact.py  test_mlx_sampling.py  test_mlx_transformer.py  test_mlx_utils.py  test_mlx_wrapper.py  test_model.py  test_model_args.py  test_model_utils.py  test_token_analyzer.py  test_watermarking.py  test_watermarking_utils.py
tests/unit/components/: __init__.py  conftest.py  test_generator.py
